
Some specific notes for MediaWiki 1.42 upgrades are below:
* …

For notes on 1.41.x and older releases, see HISTORY.

=== Configuration changes for system administrators in 1.42 ===
* …

==== New configuration ====
* $wgEditRecoveryExpiry: Number of seconds to keep edit recovery data
  after the edit is stored.
* …

==== Changed configuration ====
* …

==== Removed configuration ====
* …

=== New user-facing features in 1.42 ===
* …

=== New features for sysadmins in 1.42 ===
* …

=== New developer features in 1.42 ===
* …

=== External library changes in 1.42 ===

==== New external libraries ====
* Added mediawiki/json-codec at v2.2.1
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* Updated OOUI from v0.48.1 to v0.48.2.
* …

===== Changed development-only external libraries =====
* Upgraded QUnit from v2.19.4 to v2.20.0.
* …

==== Removed external libraries ====
* …

=== Bug fixes in 1.42 ===
* …

=== Action API changes in 1.42 ===
* …

=== Action API internal changes in 1.42 ===
* …

=== Languages updated in 1.42 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.42 ===
* UserRightsProxy, deprecated since 1.38, has been removed.
* UserLoginCompleteHook is always called with its $direct parameter set to
  boolean true. The false case has been removed.
* MagicWord::load() has been marked @internal and may change in the future
  without further notice.
* MediaWiki's virtualrest internal library has been removed in favor of the
  HTTP library like: Guzzle, MultiHttpClient or MwHttpRequest.
* …

=== Deprecations in 1.42 ===
* API modules using ApiBase::requirePostedParameters() must also override
  mustBePosted() to return true.
* BlockManager::getUserBlock() was deprecated. Instead use