@@ -9283,16 +9283,6 @@ class MainConfigSchema {
 	}
 
 	/**
-	 * By default, MediaWiki checks if the client supports cookies during the
-	 * login process, so that it can display an informative error message if
-	 * cookies are disabled. Set this to true if you want to disable this cookie
-	 * check.
-	 */
-	public const DisableCookieCheck = [
-		'default' => false,
-	];
-
-	/**
 	 * Cookies generated by MediaWiki have names starting with this prefix. Set it
 	 * to a string to use a custom prefix. Setting it to false causes the database
 	 * name to be used as a prefix.
